Translation works on windows (!), removed implicit textures suffix and cleaned code.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,9 +1,8 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = icon.bmp stellarium.ico script_load_config script_set_time_zone \
-	script_set_locale script_save_config landscapes.ini ssystem.ini messier.fab name.fab \
-	skycultures.fab files_format.txt zone.tab hipparcos.fab name.txt skylanguages.fab \
-	cities.fab arial.txt DejaVuSans.ttf cadwell.dat sharpless.dat ngc2000.dat \
-	double_txt.dat variable_txt.dat DejaVuSansMono-Roman.ttf
+pkgdata_DATA = icon.bmp stellarium.ico landscapes.ini ssystem.ini messier.fab name.fab \
+	skycultures.fab files_format.txt zone.tab hipparcos.fab skylanguages.fab cities.fab \
+	arial.txt DejaVuSans.ttf cadwell.dat sharpless.dat ngc2000.dat double_txt.dat \
+	variable_txt.dat DejaVuSansMono-Roman.ttf ngc2000names.dat star_names.fab
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
 SUBDIRS = sky_cultures scripts
