--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -2,14 +2,14 @@
 name = Guereins
 type = old_style
 nbsidetex = 8
-tex0 = landscapes/guereins4
-tex1 = landscapes/guereins5
-tex2 = landscapes/guereins6
-tex3 = landscapes/guereins7
-tex4 = landscapes/guereins8
-tex5 = landscapes/guereins1
-tex6 = landscapes/guereins2
-tex7 = landscapes/guereins3
+tex0 = landscapes/guereins4.png
+tex1 = landscapes/guereins5.png
+tex2 = landscapes/guereins6.png
+tex3 = landscapes/guereins7.png
+tex4 = landscapes/guereins8.png
+tex5 = landscapes/guereins1.png
+tex6 = landscapes/guereins2.png
+tex7 = landscapes/guereins3.png
 nbside = 8
 side0 = tex0:0:0.005:1:1
 side1 = tex1:0:0.005:1:1
@@ -19,9 +19,9 @@ side4 = tex4:0:0.005:1:1
 side5 = tex5:0:0.005:1:1
 side6 = tex6:0:0.005:1:1
 side7 = tex7:0:0.005:1:1
-groundtex = landscapes/guereinsb
+groundtex = landscapes/guereinsb.png
 ground = groundtex:0:0:1:1
-fogtex = fog
+fogtex = fog.png
 fog = fogtex:0:0:1:1
 nb_decor_repeat = 1
 decor_alt_angle = 40
@@ -43,14 +43,14 @@ texturefov = 210
 name = Hurricane
 type = old_style
 nbsidetex = 8
-tex0 = landscapes/hurricane5
-tex1 = landscapes/hurricane6
-tex2 = landscapes/hurricane7
-tex3 = landscapes/hurricane8
-tex4 = landscapes/hurricane1
-tex5 = landscapes/hurricane2
-tex6 = landscapes/hurricane3
-tex7 = landscapes/hurricane4
+tex0 = landscapes/hurricane5.png
+tex1 = landscapes/hurricane6.png
+tex2 = landscapes/hurricane7.png
+tex3 = landscapes/hurricane8.png
+tex4 = landscapes/hurricane1.png
+tex5 = landscapes/hurricane2.png
+tex6 = landscapes/hurricane3.png
+tex7 = landscapes/hurricane4.png
 nbside = 8
 side0 = tex0:0:0.005:1:1
 side1 = tex1:0:0.005:1:1
@@ -60,9 +60,9 @@ side4 = tex4:0:0.005:1:1
 side5 = tex5:0:0.005:1:1
 side6 = tex6:0:0.005:1:1
 side7 = tex7:0:0.005:1:1
-groundtex = landscapes/hurricaneb
+groundtex = landscapes/hurricaneb.png
 ground = groundtex:0:0:1:1
-fogtex = fogridge
+fogtex = fogridge.png
 fog = fogtex:0:0:1:1
 nb_decor_repeat = 1
 decor_alt_angle = 75
@@ -78,13 +78,13 @@ draw_ground_first = 1
 name = HogeRielen
 type = old_style
 nbsidetex = 7
-tex0 = landscapes/HR7
-tex1 = landscapes/HR6
-tex2 = landscapes/HR5
-tex3 = landscapes/HR4
-tex4 = landscapes/HR3
-tex5 = landscapes/HR2
-tex6 = landscapes/HR1
+tex0 = landscapes/HR7.png
+tex1 = landscapes/HR6.png
+tex2 = landscapes/HR5.png
+tex3 = landscapes/HR4.png
+tex4 = landscapes/HR3.png
+tex5 = landscapes/HR2.png
+tex6 = landscapes/HR1.png
 nbside = 7
 side0 = tex0:0:0.005:1:1
 side1 = tex1:0:0.005:1:1
@@ -94,9 +94,9 @@ side4 = tex4:0:0.005:1:1
 side5 = tex5:0:0.005:1:1
 side6 = tex6:0:0.005:1:1
 side7 = tex7:0:0.005:1:1
-groundtex = landscapes/HRb
+groundtex = landscapes/HRb.png
 ground = groundtex:0:0:1:1
-fogtex = fog
+fogtex = fog.png
 fog = fogtex:0:0:1:1
 nb_decor_repeat = 1
 decor_alt_angle = 90
