--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -4,9 +4,9 @@ parent = none
 radius = 696000.
 halo = false
 color = 1.,1.,0.8
-tex_map = sun
+tex_map = sun.png
 tex_halo = NULL
-tex_big_halo = halo
+tex_big_halo = halo.png
 big_halo_size = 200
 coord_func = sun_special
 lightning = false
@@ -21,8 +21,8 @@ parent = Sun
 radius = 2439.7
 halo = true
 color = 0.9,0.8,0.8
-tex_map = mercury
-tex_halo = star16x16
+tex_map = mercury.png
+tex_halo = star16x16.png
 coord_func = mercury_special
 lightning = true
 albedo = 0.06
@@ -38,8 +38,8 @@ parent = Sun
 radius = 6052.
 halo = true
 color = 1.,1.,0.8
-tex_map = venus
-tex_halo = star16x16
+tex_map = venus.png
+tex_halo = star16x16.png
 coord_func = venus_special
 lightning = true
 albedo = 0.77
@@ -55,8 +55,8 @@ parent = Sun
 radius = 6378.1
 halo = true
 color = 0.7,0.8,1.2
-tex_map = earthmap
-tex_halo = star16x16
+tex_map = earthmap.png
+tex_halo = star16x16.png
 coord_func = earth_special
 lightning = true
 albedo = 0.3
@@ -70,8 +70,8 @@ parent = Earth
 radius = 1738.
 halo = false
 color = 1.,1.,1.
-tex_map = lune
-tex_halo = star16x16
+tex_map = lune.png
+tex_halo = star16x16.png
 coord_func = lunar_special
 lightning = true
 albedo = 0.12
@@ -85,8 +85,8 @@ parent = Sun
 radius = 3394.
 halo = true
 color = 1.2,0.7,0.7
-tex_map = mars
-tex_halo = star16x16
+tex_map = mars.png
+tex_halo = star16x16.png
 coord_func = mars_special
 lightning = true
 albedo = 0.150
@@ -101,8 +101,8 @@ parent = Mars
 radius = 22.2
 halo = true 
 color = 1.,1.,1. 
-tex_map = phoebos 
-tex_halo = star16x16 
+tex_map = phoebos.png
+tex_halo = star16x16.png
 lightning = true 
 albedo = 0.06 
 rot_rotation_offset = 318.9 
@@ -120,12 +120,12 @@ orbit_MeanLongitude = 317.724
 
 [deimos] 
 name = Deimos 
-parent = Mars 
+parent = Mars
 radius = 12.6 
 halo = true 
 color = 1.,1.,1. 
-tex_map = deimos 
-tex_halo = star16x16 
+tex_map = deimos.png
+tex_halo = star16x16.png
 lightning = true 
 albedo = 0.21 
 rot_rotation_offset = 318.9 
@@ -147,8 +147,8 @@ parent = Sun
 radius = 71398.
 halo = true
 color = 0.8,0.9,1.0
-tex_map = jupiter
-tex_halo = star16x16
+tex_map = jupiter.png
+tex_halo = star16x16.png
 coord_func = jupiter_special
 lightning = true
 albedo = 0.51
@@ -164,8 +164,8 @@ parent = Jupiter
 radius = 1821.
 halo = true
 color = 1.,.8,.7
-tex_map = io
-tex_halo = star16x16
+tex_map = io.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.61
 rot_rotation_offset = 220.8
@@ -178,8 +178,8 @@ parent = Jupiter
 radius = 1565.
 halo = true
 color = 1.,1.,1.
-tex_map = europa
-tex_halo = star16x16
+tex_map = europa.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.64
 rot_obliquity = 0.0
@@ -192,8 +192,8 @@ parent = Jupiter
 radius = 2634.
 halo = true
 color = 1.,1.,1.
-tex_map = ganymede
-tex_halo = star16x16
+tex_map = ganymede.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.42
 rot_rotation_offset = 262.1
@@ -207,8 +207,8 @@ parent = Jupiter
 radius = 2403.
 halo = true
 color = 1.,1.,1.
-tex_map = callisto
-tex_halo = star16x16
+tex_map = callisto.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.20
 rot_rotation_offset = 120.1
@@ -222,13 +222,13 @@ parent = Sun
 radius = 60330.
 halo = true
 color = 1.,1.,0.85
-tex_map = saturn
-tex_halo = star16x16
+tex_map = saturn.png
+tex_halo = star16x16.png
 coord_func = saturn_special
 lightning = true
 rings = true
 ring_size = 160000.
-tex_ring = saturn_rings
+tex_ring = saturn_rings.png
 albedo = 0.50
 rot_periode = 10.65622
 rot_rotation_offset = 358.922
@@ -244,8 +244,8 @@ parent = Saturn
 radius = 198.6
 halo = true
 color = 0.75,0.63,0.58
-tex_map = mimas
-tex_halo = star16x16
+tex_map = mimas.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.5
 rot_rotation_offset = 190.7
@@ -259,8 +259,8 @@ parent = Saturn
 radius = 249.4
 halo = true
 color = 1.,0.9,0.75
-tex_map = enceladus
-tex_halo = star16x16
+tex_map = enceladus.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.99
 rot_rotation_offset = 322.9
@@ -273,8 +273,8 @@ parent = Saturn
 radius = 529.9
 halo = true
 color = 1.,0.9,0.75
-tex_map = tethys
-tex_halo = star16x16
+tex_map = tethys.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.9
 rot_rotation_offset = 330.6
@@ -287,8 +287,8 @@ parent = Saturn
 radius = 559.
 halo = true
 color = 1.,0.9,0.75
-tex_map = dione
-tex_halo = star16x16
+tex_map = dione.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.7
 rot_rotation_offset = 317.1
@@ -301,8 +301,8 @@ parent = Saturn
 radius = 764.
 halo = true
 color = 1.,0.9,0.75
-tex_map = rhea
-tex_halo = star16x16
+tex_map = rhea.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.7
 rot_rotation_offset = 195.0
@@ -315,8 +315,8 @@ parent = Saturn
 radius = 2575.
 halo = true
 color = 1.,0.9,0.75
-tex_map = titan
-tex_halo = star16x16
+tex_map = titan.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.21
 rot_rotation_offset = 318.9
@@ -330,8 +330,8 @@ parent = Saturn
 radius = 171.
 halo = true
 color = 1.,0.9,0.75
-tex_map = hyperion
-tex_halo = star16x16
+tex_map = hyperion.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.3
 rot_rotation_offset = 318.9
@@ -347,8 +347,8 @@ parent = Saturn
 radius = 718.
 halo = true
 color = 1.,0.9,0.75
-tex_map = iapetus
-tex_halo = star16x16
+tex_map = iapetus.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.2
 rot_rotation_offset = 14.9
@@ -363,8 +363,8 @@ parent = Sun
 radius = 26200.
 halo = true
 color = 0.75,0.95,1.
-tex_map = uranus
-tex_halo = star16x16
+tex_map = uranus.png
+tex_halo = star16x16.png
 coord_func = uranus_special
 lightning = true
 albedo = 0.66
@@ -380,8 +380,8 @@ parent = Sun
 radius = 25225.
 halo = true
 color = 0.75,0.75,1.
-tex_map = neptune
-tex_halo = star16x16
+tex_map = neptune.png
+tex_halo = star16x16.png
 coord_func = neptune_special
 lightning = true
 albedo = 0.62
@@ -398,8 +398,8 @@ parent = Sun
 radius = 1137.
 halo = true
 color = 1.,1.,1.
-tex_map = lune
-tex_halo = star16x16
+tex_map = lune.png
+tex_halo = star16x16.png
 coord_func = pluto_special
 lightning = true
 albedo = 0.55
@@ -415,8 +415,8 @@ parent = Pluto
 radius = 586.
 halo = true
 color = 1.,1.,1.
-tex_map = lune
-tex_halo = star16x16
+tex_map = lune.png
+tex_halo = star16x16.png
 lightning = true
 albedo = 0.35
 rot_rotation_offset = 213.3
