*** empty log message ***

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -90,9 +90,10 @@ tex_halo = star16x16.png
 coord_func = mars_special
 lightning = true
 albedo = 0.150
+rot_periode = 24.622962
 rot_rotation_offset = 136.005
 rot_obliquity = 26.72
-rot_equator_ascending_node = -82.91
+rot_equator_ascending_node = 82.91
 sidereal_period = 686.98
 
 [phobos]
@@ -108,15 +109,16 @@ albedo = 0.06
 rot_rotation_offset = 318.9 
 rot_obliquity = 0.6 
 #rot_equator_ascending_node = 186.6 
-coord_func = ell_orbit 
-orbit_Epoch = 2451545.0 
-orbit_Period = 0.31891 
-orbit_SemiMajorAxis = 9380 
-orbit_Eccentricity = 0.0151 
-orbit_Inclination = 1.08 
-orbit_AscendingNode = 164.931 
-orbit_LongOfPericenter = 2.262 
-orbit_MeanLongitude = 317.724 
+coord_func = phobos_special
+#coord_func = ell_orbit 
+#orbit_Epoch = 2451545.0 
+#orbit_Period = 0.31891 
+#orbit_SemiMajorAxis = 9380 
+#orbit_Eccentricity = 0.0151 
+#orbit_Inclination = 1.08 
+#orbit_AscendingNode = 164.931 
+#orbit_LongOfPericenter = 2.262 
+#orbit_MeanLongitude = 317.724 
 
 [deimos] 
 name = Deimos 
@@ -131,15 +133,16 @@ albedo = 0.21
 rot_rotation_offset = 318.9 
 rot_obliquity = 0.6 
 #rot_equator_ascending_node = 186.6 
-coord_func = ell_orbit 
-orbit_Epoch = 2451545.0 
-orbit_Period = 15.945421 
-orbit_SemiMajorAxis = 23460 
-orbit_Eccentricity = 0.0002 
-orbit_Inclination = 1.793 
-orbit_AscendingNode = 339.600 
-orbit_LongOfPericenter = 0 
-orbit_MeanLongitude = 120 
+coord_func = deimos_special
+#coord_func = ell_orbit 
+#orbit_Epoch = 2451545.0 
+#orbit_Period = 15.945421 
+#orbit_SemiMajorAxis = 23460 
+#orbit_Eccentricity = 0.0002 
+#orbit_Inclination = 1.793 
+#orbit_AscendingNode = 339.600 
+#orbit_LongOfPericenter = 0 
+#orbit_MeanLongitude = 120 
 
 [jupiter]
 name = Jupiter
@@ -373,6 +376,77 @@ rot_rotation_offset = 331.18
 rot_obliquity = -97.81
 #rot_equator_ascending_node = 167.76
 sidereal_period = 30685
+
+[miranda]
+name = Miranda
+parent = Uranus
+radius = 235.8
+halo = true
+color = 1.,0.9,0.75
+tex_map = miranda.png
+tex_halo = star16x16.png
+lightning = true
+albedo = 0.32
+rot_rotation_offset = 195.0
+rot_obliquity = 0.0
+coord_func = miranda_special
+
+[ariel]
+name = Ariel
+parent = Uranus
+radius = 578.9
+halo = true
+color = 1.,0.9,0.75
+tex_map = ariel.png
+tex_halo = star16x16.png
+lightning = true
+albedo = 0.39
+rot_rotation_offset = 195.0
+rot_obliquity = 0.0
+coord_func = ariel_special
+
+[umbriel]
+name = Umbriel
+parent = Uranus
+radius = 584.7
+halo = true
+color = 1.,0.9,0.75
+tex_map = umbriel.png
+tex_halo = star16x16.png
+lightning = true
+albedo = 0.21
+rot_rotation_offset = 195.0
+rot_obliquity = 0.0
+coord_func = umbriel_special
+
+[titania]
+name = Titania
+parent = Uranus
+radius = 788.9
+halo = true
+color = 1.,0.9,0.75
+tex_map = titania.png
+tex_halo = star16x16.png
+lightning = true
+albedo = 0.27
+rot_rotation_offset = 195.0
+rot_obliquity = 0.0
+coord_func = titania_special
+
+[oberon]
+name = Oberon
+parent = Uranus
+radius = 761.4
+halo = true
+color = 1.,0.9,0.75
+tex_map = oberon.png
+tex_halo = star16x16.png
+lightning = true
+albedo = 0.23
+rot_rotation_offset = 195.0
+rot_obliquity = 0.0
+coord_func = oberon_special
+
 
 [neptune]
 name = Neptune
