--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -62,7 +62,10 @@ lightning = true
 albedo = 0.3
 rot_periode = 23.9344694
 rot_rotation_offset = 280.5
-rot_obliquity = -23.438855
+#rot_obliquity = -23.438855
+rot_obliquity = -23.4392803055555555556
+rot_epoch = 2451545.0
+rot_precession_rate = 1.39639 #degrees/j.century (annual rate 50.27 arcseconds)
 
 [moon]
 name = Moon
