rot_periode of stellites from   http://lychnis.imcce.fr/solarsys/projet/chap10/10_2_eng.html uranus rot_obliquity and rot_equator_ascending_node from gust86

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -78,7 +78,7 @@ tex_halo = star16x16.png
 coord_func = lunar_special
 lightning = true
 albedo = 0.12
-rot_periode = 655.71986
+rot_periode = 655.7198811
 rot_rotation_offset = 308
 rot_obliquity = 23.45
 
@@ -108,20 +108,12 @@ color = 1.,1.,1.
 tex_map = phoebos.png
 tex_halo = star16x16.png
 lightning = true 
-albedo = 0.06 
+albedo = 0.06
+rot_periode = 7.653843687
 rot_rotation_offset = 318.9 
 rot_obliquity = 0.6 
 #rot_equator_ascending_node = 186.6 
 coord_func = phobos_special
-#coord_func = ell_orbit 
-#orbit_Epoch = 2451545.0 
-#orbit_Period = 0.31891 
-#orbit_SemiMajorAxis = 9380 
-#orbit_Eccentricity = 0.0151 
-#orbit_Inclination = 1.08 
-#orbit_AscendingNode = 164.931 
-#orbit_LongOfPericenter = 2.262 
-#orbit_MeanLongitude = 317.724 
 
 [deimos] 
 name = Deimos 
@@ -132,20 +124,12 @@ color = 1.,1.,1.
 tex_map = deimos.png
 tex_halo = star16x16.png
 lightning = true 
-albedo = 0.21 
+albedo = 0.21
+rot_periode = 30.29857807 
 rot_rotation_offset = 318.9 
 rot_obliquity = 0.6 
 #rot_equator_ascending_node = 186.6 
 coord_func = deimos_special
-#coord_func = ell_orbit 
-#orbit_Epoch = 2451545.0 
-#orbit_Period = 15.945421 
-#orbit_SemiMajorAxis = 23460 
-#orbit_Eccentricity = 0.0002 
-#orbit_Inclination = 1.793 
-#orbit_AscendingNode = 339.600 
-#orbit_LongOfPericenter = 0 
-#orbit_MeanLongitude = 120 
 
 [jupiter]
 name = Jupiter
@@ -174,6 +158,7 @@ tex_map = io.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.61
+rot_periode = 42.45930719
 rot_rotation_offset = 220.8
 rot_obliquity = 0.0
 coord_func = io_special
@@ -189,6 +174,7 @@ tex_halo = star16x16.png
 lightning = true
 albedo = 0.64
 rot_obliquity = 0.0
+rot_periode = 85.22834590
 rot_rotation_offset = 56.2
 coord_func = europa_special
 
@@ -202,6 +188,7 @@ tex_map = ganymede.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.42
+rot_periode = 171.7092749
 rot_rotation_offset = 262.1
 rot_obliquity = 0.1
 #rot_equator_ascending_node = 161.6
@@ -217,6 +204,7 @@ tex_map = callisto.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.20
+rot_periode = 400.5364314
 rot_rotation_offset = 120.1
 rot_obliquity = 0.4
 #rot_equator_ascending_node = 160.6
@@ -254,6 +242,7 @@ tex_map = mimas.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.5
+rot_periode = 22.61812344
 rot_rotation_offset = 190.7
 rot_obliquity = 1.5
 #rot_equator_ascending_node = 137.8
@@ -269,6 +258,7 @@ tex_map = enceladus.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.99
+rot_periode = 32.88523401
 rot_rotation_offset = 322.9
 rot_obliquity = 0.0
 coord_func = enceladus_special
@@ -283,6 +273,7 @@ tex_map = tethys.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.9
+rot_periode = 45.30726146
 rot_rotation_offset = 330.6
 rot_obliquity = 0.0
 coord_func = tethys_special
@@ -297,6 +288,7 @@ tex_map = dione.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.7
+rot_periode = 65.68597326
 rot_rotation_offset = 317.1
 rot_obliquity = 0.0
 coord_func = dione_special
@@ -311,6 +303,7 @@ tex_map = rhea.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.7
+rot_periode = 108.4200630
 rot_rotation_offset = 195.0
 rot_obliquity = 0.0
 coord_func = rhea_special
@@ -325,6 +318,7 @@ tex_map = titan.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.21
+rot_periode = 382.6907418
 rot_rotation_offset = 318.9
 rot_obliquity = 0.6
 #rot_equator_ascending_node = 186.6
@@ -340,6 +334,7 @@ tex_map = hyperion.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.3
+#rot_periode = ???
 rot_rotation_offset = 318.9
 rot_obliquity = 61.
 #rot_equator_ascending_node = 145
@@ -357,6 +352,7 @@ tex_map = iapetus.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.2
+rot_periode = 1903.940390
 rot_rotation_offset = 14.9
 rot_obliquity = 15.5
 #rot_equator_ascending_node = 213.7
@@ -376,8 +372,9 @@ lightning = true
 albedo = 0.66
 rot_periode = 17.24
 rot_rotation_offset = 331.18
-rot_obliquity = -97.81
-#rot_equator_ascending_node = 167.76
+# values from gust86:
+rot_obliquity = 97.802249927257015
+rot_equator_ascending_node = 167.648649851261355
 sidereal_period = 30685
 
 [miranda]
@@ -390,6 +387,7 @@ tex_map = miranda.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.32
+rot_periode = 33.92350158
 rot_rotation_offset = 195.0
 rot_obliquity = 0.0
 coord_func = miranda_special
@@ -404,6 +402,7 @@ tex_map = ariel.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.39
+rot_periode = 60.4890929200618
 rot_rotation_offset = 195.0
 rot_obliquity = 0.0
 coord_func = ariel_special
@@ -418,6 +417,7 @@ tex_map = umbriel.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.21
+rot_periode = 99.46022991
 rot_rotation_offset = 195.0
 rot_obliquity = 0.0
 coord_func = umbriel_special
@@ -432,6 +432,7 @@ tex_map = titania.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.27
+rot_periode = 208.9407710
 rot_rotation_offset = 195.0
 rot_obliquity = 0.0
 coord_func = titania_special
@@ -446,6 +447,7 @@ tex_map = oberon.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.23
+rot_periode = 323.1175675
 rot_rotation_offset = 195.0
 rot_obliquity = 0.0
 coord_func = oberon_special
@@ -496,6 +498,7 @@ tex_map = lune.png
 tex_halo = star16x16.png
 lightning = true
 albedo = 0.35
+rot_periode = 153.293904
 rot_rotation_offset = 213.3
 rot_obliquity = 1.0
 #rot_equator_ascending_node = 287.6
