Removed. To be re-added when it is properly implemented.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,7 +2,7 @@ man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
 pkgdata_DATA = icon.bmp stellarium.ico landscapes.ini ssystem.ini name.fab \
 	skycultures.fab files_format.txt zone.tab hipparcos.fab skylanguages.fab cities.fab \
-	DejaVuSans.ttf cadwell.dat sharpless.dat ngc2000.dat double_txt.dat variable_txt.dat \
-	DejaVuSansMono-Roman.ttf ngc2000names.dat star_names.fab
+	DejaVuSans.ttf ngc2000.dat double_txt.dat variable_txt.dat DejaVuSansMono-Roman.ttf \
+	ngc2000names.dat star_names.fab
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
 SUBDIRS = sky_cultures scripts
