added spherical panorama landscape support

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -75,8 +75,14 @@ draw_ground_first = 1
 [trees]
 name = Trees
 type = fisheye
-maptex = landscapes/trees_512
+maptex = landscapes/trees_512.png
 texturefov = 210
+
+[spherical]
+name = Trees
+type = spherical
+maptex = landscapes/spano-test.png
+texturefov = 360
 
 [hurricane]
 name = Hurricane
