radius, oblateness according to chap10monit.ps

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -35,7 +35,7 @@ sidereal_period = 87.97
 [venus]
 name = Venus
 parent = Sun
-radius = 6052.
+radius = 6051.8
 halo = true
 color = 1.,1.,0.8
 tex_map = venus.png
@@ -52,7 +52,8 @@ sidereal_period = 224.70
 [earth]
 name = Earth
 parent = Sun
-radius = 6378.1
+radius = 6378.14
+oblateness = 0.00335364
 halo = true
 color = 0.7,0.8,1.2
 tex_map = earthmap.png
@@ -70,7 +71,7 @@ rot_precession_rate = 1.39639 #degrees/j.century (annual rate 50.27 arcseconds)
 [moon]
 name = Moon
 parent = Earth
-radius = 1738.
+radius = 1737.4
 halo = false
 color = 1.,1.,1.
 tex_map = lune.png
@@ -85,7 +86,8 @@ rot_obliquity = 23.45
 [mars]
 name = Mars
 parent = Sun
-radius = 3394.
+radius = 3397
+oblateness = 0.0064763
 halo = true
 color = 1.2,0.7,0.7
 tex_map = mars.png
@@ -102,7 +104,7 @@ sidereal_period = 686.98
 [phobos]
 name = Phobos
 parent = Mars
-radius = 22.2
+radius = 11.1
 halo = true 
 color = 1.,1.,1. 
 tex_map = phoebos.png
@@ -118,7 +120,7 @@ coord_func = phobos_special
 [deimos] 
 name = Deimos 
 parent = Mars
-radius = 12.6 
+radius = 6.2
 halo = true 
 color = 1.,1.,1. 
 tex_map = deimos.png
@@ -134,7 +136,8 @@ coord_func = deimos_special
 [jupiter]
 name = Jupiter
 parent = Sun
-radius = 71398.
+radius = 71492
+oblateness = 0.064874
 halo = true
 color = 0.8,0.9,1.0
 tex_map = jupiter.png
@@ -151,7 +154,7 @@ sidereal_period = 4331.87
 [io]
 name = Io
 parent = Jupiter
-radius = 1821.
+radius = 1821.3
 halo = true
 color = 1.,.8,.7
 tex_map = io.png
@@ -213,7 +216,8 @@ coord_func = calisto_special
 [saturn]
 name = Saturn
 parent = Sun
-radius = 60330.
+radius = 60268
+oblateness = 0.097962
 halo = true
 color = 1.,1.,0.85
 tex_map = saturn.png
@@ -266,7 +270,7 @@ coord_func = enceladus_special
 [tethys]
 name = Tethys
 parent = Saturn
-radius = 529.9
+radius = 529.8
 halo = true
 color = 1.,0.9,0.75
 tex_map = tethys.png
@@ -281,7 +285,7 @@ coord_func = tethys_special
 [dione]
 name = Dione
 parent = Saturn
-radius = 559.
+radius = 560.
 halo = true
 color = 1.,0.9,0.75
 tex_map = dione.png
@@ -327,7 +331,7 @@ coord_func = titan_special
 [hyperion]
 name = Hyperion
 parent = Saturn
-radius = 171.
+radius = 141.5
 halo = true
 color = 1.,0.9,0.75
 tex_map = hyperion.png
@@ -362,7 +366,8 @@ coord_func = iapetus_special
 [uranus]
 name = Uranus
 parent = Sun
-radius = 26200.
+radius = 25559
+oblateness = 0.022927
 halo = true
 color = 0.75,0.95,1.
 tex_map = uranus.png
@@ -456,7 +461,8 @@ coord_func = oberon_special
 [neptune]
 name = Neptune
 parent = Sun
-radius = 25225.
+radius = 24764
+oblateness = 0.017081
 halo = true
 color = 0.75,0.75,1.
 tex_map = neptune.png
@@ -474,7 +480,7 @@ sidereal_period = 60189
 [pluto]
 name = Pluto
 parent = Sun
-radius = 1137.
+radius = 1195.
 halo = true
 color = 1.,1.,1.
 tex_map = lune.png
@@ -491,7 +497,7 @@ sidereal_period = 90797
 [charon]
 name = Charon
 parent = Pluto
-radius = 586.
+radius = 593.
 halo = true
 color = 1.,1.,1.
 tex_map = lune.png
