--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -50,7 +50,7 @@ flag_show_script_bar           = false
 mouse_cursor_timeout           = 0
 flag_script_allow_ui           = false
 
-[color]
+[standard_color]
 azimuthal_color                = 0.3,0.2,0.1
 equatorial_color               = 0.1,0.2,0.3
 equator_color                  = 0.2,0.2,0.6
@@ -68,7 +68,7 @@ planet_orbits_color            = 0.6,0.2,0.2
 object_trails_color            = 1,0.7,0
 chart_color                    = 0,0,0
 
-[colorc]
+[night_color]
 azimuthal_color                = 0.8,0.8,0.8
 equatorial_color               = 0.6,0.6,0.8
 equator_color                  = 0.2,0.2,0.6
@@ -86,7 +86,7 @@ planet_orbits_color            = 0.8,0.2,0.2
 object_trails_color            = 1,0.7,0
 chart_color                    = 1,1,1
 
-[colorr]
+[chart_color]
 azimuthal_color                = 0.8,0.1,0.1
 equatorial_color               = 0.8,0.1,0.1
 equator_color                  = 0.8,0.2,0.2
@@ -120,8 +120,7 @@ flag_enable_move_mouse         = false
 init_fov                       = 60
 init_view_pos                  = 1,1e-05,0.2
 auto_move_duration             = 1.399999976158142
-flag_utc_time                  = false
-mouse_zoom                     = 30
+mouse_zoom                     = 10
 move_speed                     = 0.0004
 zoom_speed                     = 0.00035
 viewing_mode                   = horizon
