--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -55,6 +55,7 @@ azimuthal_color                = 0.3,0.2,0.1
 equatorial_color               = 0.1,0.2,0.3
 equator_color                  = 0.2,0.2,0.6
 ecliptic_color                 = 0.6,0.2,0.2
+meridian_color                 = 0.2,0.6,0.2
 const_lines_color              = 0.1,0.15,0.2
 const_names_color              = 0.1,0.2,0.3
 const_boundary_color           = 0.3,0.1,0.1
@@ -73,6 +74,7 @@ azimuthal_color                = 0.8,0.8,0.8
 equatorial_color               = 0.6,0.6,0.8
 equator_color                  = 0.2,0.2,0.6
 ecliptic_color                 = 0.6,0.2,0.2
+meridian_color                 = 0.2,0.6,0.2
 const_lines_color              = 0.3,0.3,0.8
 const_names_color              = 0.2,0.2,0.8
 const_boundary_color           = 0.8,0.3,0.3
@@ -91,6 +93,7 @@ azimuthal_color                = 0.8,0.1,0.1
 equatorial_color               = 0.8,0.1,0.1
 equator_color                  = 0.8,0.2,0.2
 ecliptic_color                 = 0.8,0.2,0.2
+meridian_color                 = 0.2,0.8,0.2
 const_lines_color              = 0.8,0.2,0.2
 const_names_color              = 0.8,0.2,0.2
 const_boundary_color           = 0.8,0.3,0.3
