poebos.png replaced with phobos.png

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -107,7 +107,7 @@ parent = Mars
 radius = 11.1
 halo = true 
 color = 1.,1.,1. 
-tex_map = phoebos.png
+tex_map = phobos.png
 tex_halo = star16x16.png
 lightning = true 
 albedo = 0.06
