Fixed bugs, applied patch by "flying_jacket".

--- a/data/sky_cultures/polynesian/Makefile.am
+++ b/data/sky_cultures/polynesian/Makefile.am
@@ -1,3 +1,4 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data/sky_cultures/polynesian
-pkgdata_DATA = constellation_names.eng.fab constellationsart.fab constellation_names.haw.fab constellationship.fab
+pkgdata_DATA = constellation_names.eng.fab constellationsart.fab \
+	constellation_names.haw.fab constellationship.fab info.ini
 EXTRA_DIST = $(pkgdata_DATA)
