--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -12,7 +12,7 @@ vertical_offset                = 0
 maximum_fps                    = 10000
 
 [projection]
-type                           = fisheye
+type                           = stereographic
 viewport                       = maximized
 distortion_function            = -1
 
