spheric_mirror configuration parameters included, [projection]distortion_function removed

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -10,11 +10,27 @@ bbp_mode                       = 32
 horizontal_offset              = 0
 vertical_offset                = 0
 maximum_fps                    = 10000
+distorter                      = none
+
+# when you use distorter = fisheye_to_spheric_mirror
+# you must set [projection] type = fisheye
 
 [projection]
 type                           = stereographic
 viewport                       = maximized
-distortion_function            = -1
+
+[spheric_mirror]
+projector_gamma                = 0.45
+projector_position_x           = 0.0
+projector_position_y           = 1.0
+projector_position_z           = -0.2
+mirror_position_x              = 0.0
+mirror_position_y              = 2.0
+mirror_position_z              = 0.0
+mirror_radius                  = 0.25
+dome_radius                    = 2.5
+zenith_y                       = 0.125
+scaling_factor                 = 0.8
 
 [localization]
 sky_culture                    = western
