set [moon]halo=true

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -72,7 +72,7 @@ rot_precession_rate = 1.39639 #degrees/j.century (annual rate 50.27 arcseconds)
 name = Moon
 parent = Earth
 radius = 1737.4
-halo = false
+halo = true
 color = 1.,1.,1.
 tex_map = lune.png
 tex_halo = star16x16.png
