renamed lightning -> lighting

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -9,7 +9,7 @@ tex_halo = NULL
 tex_big_halo = halo.png
 big_halo_size = 200
 coord_func = sun_special
-lightning = false
+lighting = false
 albedo = -1.
 rot_periode = 654.61
 rot_obliquity = 7.25
@@ -24,7 +24,7 @@ color = 0.9,0.8,0.8
 tex_map = mercury.png
 tex_halo = star16x16.png
 coord_func = mercury_special
-lightning = true
+lighting = true
 albedo = 0.06
 rot_periode = 1407.509405
 rot_rotation_offset = 291.20
@@ -41,7 +41,7 @@ color = 1.,1.,0.8
 tex_map = venus.png
 tex_halo = star16x16.png
 coord_func = venus_special
-lightning = true
+lighting = true
 albedo = 0.77
 rot_periode = 5832.479839
 rot_rotation_offset = 137.45
@@ -59,7 +59,7 @@ color = 0.7,0.8,1.2
 tex_map = earthmap.png
 tex_halo = star16x16.png
 coord_func = earth_special
-lightning = true
+lighting = true
 albedo = 0.3
 rot_periode = 23.9344694
 rot_rotation_offset = 280.5
@@ -77,7 +77,7 @@ color = 1.,1.,1.
 tex_map = lune.png
 tex_halo = star16x16.png
 coord_func = lunar_special
-lightning = true
+lighting = true
 albedo = 0.12
 rot_periode = 655.7198811
 rot_rotation_offset = 308
@@ -93,7 +93,7 @@ color = 1.2,0.7,0.7
 tex_map = mars.png
 tex_halo = star16x16.png
 coord_func = mars_special
-lightning = true
+lighting = true
 albedo = 0.150
 rot_periode = 24.622962
 rot_rotation_offset = 136.005
@@ -109,7 +109,7 @@ halo = true
 color = 1.,1.,1. 
 tex_map = phobos.png
 tex_halo = star16x16.png
-lightning = true 
+lighting = true 
 albedo = 0.06
 rot_periode = 7.653843687
 rot_rotation_offset = 318.9 
@@ -125,7 +125,7 @@ halo = true
 color = 1.,1.,1. 
 tex_map = deimos.png
 tex_halo = star16x16.png
-lightning = true 
+lighting = true 
 albedo = 0.21
 rot_periode = 30.29857807 
 rot_rotation_offset = 318.9 
@@ -143,7 +143,7 @@ color = 0.8,0.9,1.0
 tex_map = jupiter.png
 tex_halo = star16x16.png
 coord_func = jupiter_special
-lightning = true
+lighting = true
 albedo = 0.51
 rot_periode = 9.927953
 rot_rotation_offset = 151
@@ -159,7 +159,7 @@ halo = true
 color = 1.,.8,.7
 tex_map = io.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.61
 rot_periode = 42.45930719
 rot_rotation_offset = 220.8
@@ -174,7 +174,7 @@ halo = true
 color = 1.,1.,1.
 tex_map = europa.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.64
 rot_obliquity = 0.0
 rot_periode = 85.22834590
@@ -189,7 +189,7 @@ halo = true
 color = 1.,1.,1.
 tex_map = ganymede.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.42
 rot_periode = 171.7092749
 rot_rotation_offset = 262.1
@@ -205,7 +205,7 @@ halo = true
 color = 1.,1.,1.
 tex_map = callisto.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.20
 rot_periode = 400.5364314
 rot_rotation_offset = 120.1
@@ -223,7 +223,7 @@ color = 1.,1.,0.85
 tex_map = saturn.png
 tex_halo = star16x16.png
 coord_func = saturn_special
-lightning = true
+lighting = true
 rings = true
 ring_size = 160000.
 tex_ring = saturn_rings.png
@@ -232,7 +232,7 @@ rot_periode = 10.65622
 rot_rotation_offset = 358.922
 rot_obliquity = 28.049
 rot_equator_ascending_node = 169.5291
-lightning = true
+lighting = true
 sidereal_period = 10760
 
 
@@ -244,7 +244,7 @@ halo = true
 color = 0.75,0.63,0.58
 tex_map = mimas.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.5
 rot_periode = 22.61812344
 rot_rotation_offset = 190.7
@@ -260,7 +260,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = enceladus.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.99
 rot_periode = 32.88523401
 rot_rotation_offset = 322.9
@@ -275,7 +275,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = tethys.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.9
 rot_periode = 45.30726146
 rot_rotation_offset = 330.6
@@ -290,7 +290,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = dione.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.7
 rot_periode = 65.68597326
 rot_rotation_offset = 317.1
@@ -305,7 +305,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = rhea.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.7
 rot_periode = 108.4200630
 rot_rotation_offset = 195.0
@@ -320,7 +320,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = titan.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.21
 rot_periode = 382.6907418
 rot_rotation_offset = 318.9
@@ -336,7 +336,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = hyperion.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.3
 #rot_periode = ???
 rot_rotation_offset = 318.9
@@ -354,7 +354,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = iapetus.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.2
 rot_periode = 1903.940390
 rot_rotation_offset = 14.9
@@ -373,7 +373,7 @@ color = 0.75,0.95,1.
 tex_map = uranus.png
 tex_halo = star16x16.png
 coord_func = uranus_special
-lightning = true
+lighting = true
 albedo = 0.66
 rot_periode = 17.24
 rot_rotation_offset = 331.18
@@ -390,7 +390,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = miranda.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.32
 rot_periode = 33.92350158
 rot_rotation_offset = 195.0
@@ -405,7 +405,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = ariel.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.39
 rot_periode = 60.4890929200618
 rot_rotation_offset = 195.0
@@ -420,7 +420,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = umbriel.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.21
 rot_periode = 99.46022991
 rot_rotation_offset = 195.0
@@ -435,7 +435,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = titania.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.27
 rot_periode = 208.9407710
 rot_rotation_offset = 195.0
@@ -450,7 +450,7 @@ halo = true
 color = 1.,0.9,0.75
 tex_map = oberon.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.23
 rot_periode = 323.1175675
 rot_rotation_offset = 195.0
@@ -468,7 +468,7 @@ color = 0.75,0.75,1.
 tex_map = neptune.png
 tex_halo = star16x16.png
 coord_func = neptune_special
-lightning = true
+lighting = true
 albedo = 0.62
 rot_periode = 16.11
 rot_rotation_offset = 228.65
@@ -486,7 +486,7 @@ color = 1.,1.,1.
 tex_map = lune.png
 tex_halo = star16x16.png
 coord_func = pluto_special
-lightning = true
+lighting = true
 albedo = 0.55
 rot_periode = 153.293904
 rot_rotation_offset = 320.75
@@ -502,7 +502,7 @@ halo = true
 color = 1.,1.,1.
 tex_map = lune.png
 tex_halo = star16x16.png
-lightning = true
+lighting = true
 albedo = 0.35
 rot_periode = 153.293904
 rot_rotation_offset = 213.3
