fixed dim landscape without atmosphere and added orbit drawing for earth

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -67,6 +67,7 @@ rot_rotation_offset = 280.5
 rot_obliquity = -23.4392803055555555556
 rot_epoch = 2451545.0
 rot_precession_rate = 1.39639 #degrees/j.century (annual rate 50.27 arcseconds)
+sidereal_period = 365.25
 
 [moon]
 name = Moon
