--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -66,7 +66,7 @@ flag_show_script_bar           = false
 mouse_cursor_timeout           = 0
 flag_script_allow_ui           = false
 
-[standard_color]
+[color]
 azimuthal_color                = 0.3,0.2,0.1
 equatorial_color               = 0.1,0.2,0.3
 equator_color                  = 0.2,0.2,0.6
