--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -518,3 +518,21 @@ orbit_Inclination = 0.0048
 orbit_AscendingNode = 93.5582
 orbit_LongOfPericenter = 227.3188
 orbit_MeanLongitude = 320.7583
+
+[solar_system_observer]
+name = Solar System Observer
+parent = Sun
+radius = 1.
+halo = false
+color = 0.,0.,0.
+coord_func = ell_orbit
+orbit_Epoch = 2451545.0
+orbit_Period = 1000000000000
+orbit_SemiMajorAxis = 6000000000
+orbit_Eccentricity = 0
+orbit_Inclination = 90
+orbit_AscendingNode = 0
+orbit_LongOfPericenter = 0
+orbit_MeanLongitude = 90
+hidden = true
+
