Added lunar landscape

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -1,42 +1,3 @@
-[beaumonthills]
-name = Beaumonthills
-type = old_style
-nbsidetex = 10
-tex0 = landscapes/beau1.png
-tex1 = landscapes/beau2.png
-tex2 = landscapes/beau3.png
-tex3 = landscapes/beau4.png
-tex4 = landscapes/beau5.png
-tex5 = landscapes/beau6.png
-tex6 = landscapes/beau7.png
-tex7 = landscapes/beau8.png
-tex8 = landscapes/beau9.png
-tex9 = landscapes/beau10.png
-nbside = 10
-side0 = tex8:0:0.005:1:1
-side1 = tex9:0:0.005:1:1
-side2 = tex0:0:0.005:1:1
-side3 = tex1:0:0.005:1:1
-side4 = tex2:0:0.005:1:1
-side5 = tex3:0:0.005:1:1
-side6 = tex4:0:0.005:1:1
-side7 = tex5:0:0.005:1:1
-side8 = tex6:0:0.005:1:1
-side9 = tex7:0:0.005:1:1
-groundtex = landscapes/beaub.png
-ground = groundtex:0:0:1:1
-fogtex = fog.png
-fog = fogtex:0:0:1:1
-nb_decor_repeat = 1
-decor_alt_angle = 35
-decor_angle_shift = -22
-decor_angle_rotatez = -29
-ground_angle_shift = -22
-ground_angle_rotatez = 95
-fog_alt_angle = 20
-fog_angle_shift = -3
-draw_ground_first = 1
-
 [guereins]
 name = Guereins
 type = old_style
@@ -78,11 +39,10 @@ type = fisheye
 maptex = landscapes/trees_512.png
 texturefov = 210
 
-[spherical]
-name = Trees
+[moon]
+name = Moon
 type = spherical
-maptex = landscapes/spano-test.png
-texturefov = 360
+maptex = landscapes/apollo17.png
 
 [hurricane]
 name = Hurricane
