--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -56,10 +56,6 @@ flag_show_date                 = true
 flag_show_appname              = true
 flag_show_fov                  = true
 flag_show_selected_object_info = true
-gui_base_color                 = 0.3,0.4,0.7
-gui_text_color                 = 0.7,0.8,0.9
-gui_base_colorr                = 0.7,0.2,0.1
-gui_text_colorr                = 0.9,0.4,0.2
 base_font_size                 = 14
 base_font_name                 = DejaVuSans.ttf
 flag_show_script_bar           = false
@@ -67,6 +63,8 @@ mouse_cursor_timeout           = 0
 flag_script_allow_ui           = false
 
 [color]
+gui_base_color                 = 1.,0.93,0.0
+gui_text_color                 = 0.2,0.2,0.6
 azimuthal_color                = 0.3,0.2,0.1
 equatorial_color               = 0.1,0.2,0.3
 equator_color                  = 0.2,0.2,0.6
@@ -86,6 +84,8 @@ object_trails_color            = 1,0.7,0
 chart_color                    = 0,0,0
 
 [night_color]
+gui_base_color                 = 0.7,0.2,0.1
+gui_text_color                 = 0.9,0.4,0.2
 azimuthal_color                = 0.3,0.2,0.1
 equatorial_color               = 0.1,0.2,0.3
 equator_color                  = 0.2,0.2,0.6
@@ -105,6 +105,8 @@ object_trails_color            = 1,0.7,0
 chart_color                    = 1,1,1
 
 [chart_color]
+gui_base_color                 = 0.7,0.2,0.1
+gui_text_color                 = 0.9,0.4,0.2
 azimuthal_color                = 0.8,0.1,0.1
 equatorial_color               = 0.8,0.1,0.1
 equator_color                  = 0.8,0.2,0.2
