Fixed wrong colors ;)

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -63,8 +63,8 @@ mouse_cursor_timeout           = 0
 flag_script_allow_ui           = false
 
 [color]
-gui_base_color                 = 1.,0.93,0.0
-gui_text_color                 = 0.2,0.2,0.6
+gui_base_color                 = 0.3,0.4,0.7
+gui_text_color                 = 0.7,0.8,0.9
 azimuthal_color                = 0.3,0.2,0.1
 equatorial_color               = 0.1,0.2,0.3
 equator_color                  = 0.2,0.2,0.6
