home_planet, flag_light_travel_time

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -178,6 +178,7 @@ flag_star_name                 = true
 flag_planets                   = true
 flag_planets_hints             = true
 flag_planets_orbits            = false
+flag_light_travel_time         = false
 flag_object_trails             = false
 flag_nebula                    = true
 flag_nebula_name               = false
@@ -198,4 +199,5 @@ landscape_name                 = guereins
 time_zone                      = system_default
 time_display_format            = system_default
 date_display_format            = system_default
+home_planet                    = Earth
 
