star names now come from sky culture and get translated as needed

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -535,5 +535,6 @@ orbit_Inclination = 90
 orbit_AscendingNode = 0
 orbit_LongOfPericenter = 0
 orbit_MeanLongitude = 90
+rot_obliquity = 90
 hidden = true
 
