--- a/data/sky_cultures/polynesian/Makefile.am
+++ b/data/sky_cultures/polynesian/Makefile.am
@@ -1,4 +1,4 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data/sky_cultures/polynesian
 pkgdata_DATA = constellation_names.eng.fab constellationsart.fab \
-	constellation_names.haw.fab constellationship.fab info.ini
+	constellation_names.haw.fab constellationship.fab info.ini star_names.fab
 EXTRA_DIST = $(pkgdata_DATA)
