--- a/textures/Makefile.am
+++ b/textures/Makefile.am
@@ -1,27 +1,27 @@
 pkgdatadir = $(datadir)/@PACKAGE@/textures
 pkgdata_DATA = mercury.png venus.png earthmap.png mars.png 	jupiter.png \
-	saturn.png uranus.png neptune.png earth-shadow.png saturn_rings.png 	lune.png \
-	phobos.png deimos.png 	io.png europa.png ganymede.png callisto.png 	mimas.png \
-	enceladus.png tethys.png dione.png rhea.png titan.png hyperion.png iapetus.png \
-		miranda.png ariel.png umbriel.png titania.png oberon.png 	backmenu_flip.png m11.png \
-	m33.png m57.png 	m79.png backmenu.png m12.png m34.png m58.png m7.png \
-		bt_atmosphere.png fog.png m13.png m35.png m59.png m80.png milkyway.png 	bt_cardinal.png \
-	fogridge.png m14.png m36.png m5.png m81.png neb.png bt_config.png 	m15.png m37.png \
-	m60.png m82.png bt_constart.png halo.png 	m16.png m38.png m61.png m83.png \
-	orion_neb.png bt_constellations.png 	headermenu.png m17.png m3.png m62.png m84.png \
-	bt_const_names.png 	m18.png m41.png m63.png m85.png pleiades.png bt_follow.png m19.png \
-		m42.png m64.png m86.png pointeur2.png bt_goto.png logo24bits.png m1.png m43.png \
-		m65.png m87.png pointeur4.png bt_grid.png m20.png m44.png m66.png 	m89.png \
-	pointeur5.png bt_ground.png m100.png m21.png m45.png m67.png m8.png 	bt_help.png \
-	m101.png m22.png m46.png m68.png m90.png 	bt_nebula.png m102.png m23.png m48.png \
-	m69.png m91.png bt_planet.png 	m103.png m24.png m49.png m6.png m92.png \
-	bt_quit.png m104.png m25.png m4.png 	m70.png m93.png star16x16.png bt_search.png \
-	m105.png m26.png m50.png m71.png 	m94.png sun.png bt_track.png m106.png m27.png \
-	m51.png m72.png m95.png 	m107.png m28.png m52.png m73.png m96.png up.png \
-	m108.png m29.png 	m53.png m74.png m97.png m109.png m2.png m54.png m75.png \
-		m98.png down.png m10.png m30.png m55.png m76.png m99.png zenith.png 	m110.png \
-	m31.png m56.png m78.png m9.png bt_alert.png bt_blank.png 	bt_night.png \
-	bt_question.png city.png pointeur1.png bt_chart.png bt_nightview.png \
-		milkyway_chart.png bt_fwd.png bt_now.png bt_realtime.png bt_rwd.png
+		saturn.png uranus.png neptune.png earth-shadow.png saturn_rings.png 	lune.png \
+		phobos.png deimos.png 	io.png europa.png ganymede.png callisto.png 	mimas.png \
+		enceladus.png tethys.png dione.png rhea.png titan.png hyperion.png iapetus.png \
+			miranda.png ariel.png umbriel.png titania.png oberon.png 	backmenu_flip.png m11.png \
+		m33.png m57.png 	m79.png backmenu.png m12.png m34.png m58.png m7.png \
+			bt_atmosphere.png fog.png m13.png m35.png m59.png m80.png milkyway.png 	bt_cardinal.png \
+		fogridge.png m14.png m36.png m5.png m81.png neb.png bt_config.png 	m15.png m37.png \
+		m60.png m82.png bt_constart.png halo.png 	m16.png m38.png m61.png m83.png \
+		orion_neb.png bt_constellations.png 	headermenu.png m17.png m3.png m62.png m84.png \
+		bt_const_names.png 	m18.png m41.png m63.png m85.png pleiades.png bt_follow.png m19.png \
+			m42.png m64.png m86.png pointeur2.png bt_goto.png logo24bits.png m1.png m43.png \
+			m65.png m87.png pointeur4.png bt_grid.png m20.png m44.png m66.png 	m89.png \
+		pointeur5.png bt_ground.png m100.png m21.png m45.png m67.png m8.png 	bt_help.png \
+		m101.png m22.png m46.png m68.png m90.png 	bt_nebula.png m102.png m23.png m48.png \
+		m69.png m91.png bt_planet.png 	m103.png m24.png m49.png m6.png m92.png \
+		bt_quit.png m104.png m25.png m4.png 	m70.png m93.png star16x16.png bt_search.png \
+		m105.png m26.png m50.png m71.png 	m94.png sun.png bt_track.png m106.png m27.png \
+		m51.png m72.png m95.png 	m107.png m28.png m52.png m73.png m96.png up.png \
+		m108.png m29.png 	m53.png m74.png m97.png m109.png m2.png m54.png m75.png \
+			m98.png down.png m10.png m30.png m55.png m76.png m99.png zenith.png 	m110.png \
+		m31.png m56.png m78.png m9.png bt_alert.png bt_blank.png 	bt_night.png \
+		bt_question.png city.png pointeur1.png bt_chart.png bt_nightview.png \
+			milkyway_chart.png bt_fwd.png bt_now.png bt_realtime.png bt_rwd.png starc64x64.png
 EXTRA_DIST = $(pkgdata_DATA)
 SUBDIRS = landscapes constellation-art
