Added option to display only nebulas with texture.

--- a/data/default_config.ini
+++ b/data/default_config.ini
@@ -183,6 +183,7 @@ flag_object_trails             = false
 flag_nebula                    = true
 flag_nebula_name               = false
 flag_nebula_long_name          = false
+flag_nebula_display_no_texture = false
 max_mag_nebula_name            = 8
 nebula_scale                   = 1
 flag_milky_way                 = true
