Cleaned data files.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,8 +1,8 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
 pkgdata_DATA = icon.bmp stellarium.ico landscapes.ini ssystem.ini name.fab \
-		skycultures.fab files_format.txt zone.tab hipparcos.fab skylanguages.fab cities.fab \
-		DejaVuSans.ttf ngc2000.dat double_txt.dat variable_txt.dat DejaVuSansMono-Roman.ttf \
-		ngc2000names.dat star_names.fab default_config.ini nebula_textures.fab
+	zone.tab hipparcos.fab cities.fab DejaVuSans.ttf ngc2000.dat double_txt.dat \
+	variable_txt.dat ngc2000names.dat default_config.ini nebula_textures.fab \
+	DejaVuSansMono.ttf constellations_boundaries.dat
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
 SUBDIRS = sky_cultures scripts
