Shutted up warnings.

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -526,6 +526,10 @@ parent = Sun
 radius = 1.
 halo = false
 color = 0.,0.,0.
+tex_map = lune.png
+tex_halo = star16x16.png
+lighting = false
+albedo = 0.
 coord_func = ell_orbit
 orbit_Epoch = 2451545.0
 orbit_Period = 100000000000000
