Added missing landscape texture to project.

--- a/textures/landscapes/Makefile.am
+++ b/textures/landscapes/Makefile.am
@@ -1,6 +1,7 @@
 pkgdatadir = $(datadir)/@PACKAGE@/textures/landscapes
-pkgdata_DATA = guereins1.png  guereins5.png  guereinsb.png  HR4.png  HRb.png hurricane4.png  hurricane8.png \
-guereins2.png  guereins6.png  HR1.png        HR5.png  hurricane1.png  hurricane5.png  hurricaneb.png \
-guereins3.png  guereins7.png  HR2.png        HR6.png  hurricane2.png  hurricane6.png  trees_512.png \
-guereins4.png  guereins8.png  HR3.png        HR7.png  hurricane3.png  hurricane7.png
+pkgdata_DATA = guereins1.png guereins5.png guereinsb.png HR4.png HRb.png \
+	hurricane4.png hurricane8.png guereins2.png guereins6.png HR1.png HR5.png \
+	hurricane1.png hurricane5.png hurricaneb.png guereins3.png guereins7.png HR2.png \
+	HR6.png hurricane2.png hurricane6.png trees_512.png guereins4.png guereins8.png \
+	HR3.png HR7.png hurricane3.png hurricane7.png apollo17.png
 EXTRA_DIST = $(pkgdata_DATA)
